Implicit and explicit waits , Exceptions and debuging

--- a/pytest.ini
+++ b/pytest.ini
@@ -4,3 +4,5 @@ markers =
     login: All login tests
     positive: All positive tests
     negative: All negative tests
+    exceptions: All tests with exceptions
+    debug: All tests to debug
