--- a/pytest.ini
+++ b/pytest.ini
@@ -1,8 +1,9 @@
 [pytest]
 markers =
     math: Math tests
-    login: All login tests
-    positive: All positive tests
-    negative: All negative tests
-    exceptions: All tests with exceptions
-    debug: All tests to debug
+    login: All Login tests
+    positive: All positive Selenium tests
+    negative: All negative Selenium tests
+    exceptions: All exceptions tests
+    debug: debug tests
+    ooprun: New test run for oop classes to test
